--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shubham Deepak Lonkar
-logo: /assets/img/headshot_circle.png
+logo: head_shot.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
