--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shubham Deepak Lonkar
-logo: head_shot.jpg
+logo: /head_shot.jpg
 #description: text below image
-show_downloads: true
+#show_downloads: true
 theme: jekyll-theme-minimal
