--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Shubham Deepak Lonkar
 logo: (/head_shot.jpg)
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
